# liblab

./: .gitattributes  README.md  docker-compose.yml  package-lock.json  run-dev.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/src/app/: main.py
backend/src/app/api/: colors.py  health.py
backend/src/app/core/: config.py  logging.py
backend/src/app/middleware/: rate_limit.py  upload_size.py
backend/src/app/schemas/: colors.py
backend/src/app/utils/: color_conversion.py  file_validation.py
frontend/: .dockerignore  .env.example  eslint-local-rules.cjs  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/docs/: palette-generation-algorithm.md  setup-cloudflare-images.md
frontend/public/: manifest.json
frontend/scripts/: extract-anchor-colors.ts  test-10-anchors.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/(default)/: layout.tsx  page.tsx
frontend/src/app/(non-localized)/: layout.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/components/: breadcrumb.tsx  checkerboard-preview.tsx  color-history-fab.tsx  file-upload.tsx  footer.tsx  full-page-drop-zone.tsx  header.tsx  link.tsx  slider.tsx  theme-toggle.tsx  toast.tsx  tool-card.tsx  web-application-schema.tsx
frontend/src/config/: anchor-curves.ts  site.ts  tools.ts
frontend/src/contexts/: color-history-context.tsx
frontend/src/i18n/: request.ts
frontend/src/lib/: cloudflare-loader.ts  favicon-generator.ts  i18n.ts  image-processing.ts  metadata.ts  tools.ts
frontend/src/types/: assets.d.ts  global.d.ts
(+128 files in other folders)
