[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "8pxapp-backend"
version = "0.1.0"
description = "8px app backend API"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "click==8.3.0",
    "fastapi==0.121.1",
    "h11==0.16.0",
    "idna==3.11",
    "numpy==2.3.4",
    "pillow==12.0.0",
    "pydantic==2.12.4",
    "pydantic_core==2.41.5",
    "pydantic-settings==2.6.1",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "starlette==0.49.3",
    "typing_extensions==4.15.0",
    "uvicorn[standard]==0.38.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "ruff==0.14.4",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = ["venv", ".venv"]
mypy_path = "src"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # FastAPI Depends() in function arguments is valid
    "UP017", # datetime.UTC not yet supported by mypy
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["src"]
